// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for color: contrast-high and orientation: "horizontal" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-high and orientation: "horizontal" 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-high and orientation: "vertical" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-high and orientation: "vertical" 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-high);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low and orientation: "horizontal" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low and orientation: "horizontal" 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low and orientation: "vertical" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low and orientation: "vertical" 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-low and orientation: {"base":"horizontal","xs":"vertical","s":"horizontal","m":"vertical","l":"horizontal","xl":"vertical"} 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-low);
  height: 1px;
  width: 100%;
}
@media(min-width:480px) {
  hr {
    height: 100%;
    width: 1px;
  }
}

@media(min-width:760px) {
  hr {
    height: 1px;
    width: 100%;
  }
}

@media(min-width:1000px) {
  hr {
    height: 100%;
    width: 1px;
  }
}

@media(min-width:1300px) {
  hr {
    height: 1px;
    width: 100%;
  }
}

@media(min-width:1760px) {
  hr {
    height: 100%;
    width: 1px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium and orientation: "horizontal" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium and orientation: "horizontal" 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 1px;
  width: 100%;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium and orientation: "vertical" 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 100%;
  width: 1px;
}"
`;

exports[`getComponentCss() > should return correct css for color: contrast-medium and orientation: "vertical" 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
hr {
  all: unset;
  display: block;
  background: var(--p-color-contrast-medium);
  height: 100%;
  width: 1px;
}"
`;
